--- a/content/resources/11-943f01-th.md
+++ b/content/resources/11-943f01-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/11-943-special-studies-in-urban-studies-and-planning-the-cardener-river-corridor-workshop-fall-2001/a65fe4c7c2e5f7ac138e49916d79bf4a_11-943f01-th.jpg
+file: /courses/11-943-special-studies-in-urban-studies-and-planning-the-cardener-river-corridor-workshop-fall-2001/a65fe4c7c2e5f7ac138e49916d79bf4a_11-943f01-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Cardener River near Barcelona. (Image by Prof. Eran Ben-Joseph.)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 11-943f01-th.jpg
 uid: a65fe4c7-c2e5-f7ac-138e-49916d79bf4a
 ---
+New image Upload
+
