--- a/content/resources/11-943f01.md
+++ b/content/resources/11-943f01.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The Cardener River near Barcelona.  (Image by Prof. Eran Ben-Joseph.)
-file: /media/courses/11-943-special-studies-in-urban-studies-and-planning-the-cardener-river-corridor-workshop-fall-2001/55cb207bf8a8656ee25331761ced9da4_11-943f01.jpg
+file: /courses/11-943-special-studies-in-urban-studies-and-planning-the-cardener-river-corridor-workshop-fall-2001/55cb207bf8a8656ee25331761ced9da4_11-943f01.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Cardener River near Barcelona. (Image by Prof. Eran Ben-Joseph.)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 11-943f01.jpg
 uid: 55cb207b-f8a8-656e-e253-31761ced9da4
 ---
+The Cardener River near Barcelona.  (Image by Prof. Eran Ben-Joseph.)
+
