Sync all content

--- a/content/resources/11-943f01.md
+++ b/content/resources/11-943f01.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of a city overlooking a highway and a river.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-943f01.jpg
 uid: 55cb207b-f8a8-656e-e253-31761ced9da4
 ---
 The Cardener River near Barcelona.  (Image by Prof. Eran Ben-Joseph.)
-
