--- a/content/resources/11-943f01-th.md
+++ b/content/resources/11-943f01-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of a city overlooking a highway and a river.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-943f01-th.jpg
 uid: a65fe4c7-c2e5-f7ac-138e-49916d79bf4a
 ---
 New image Upload
-
